--- a/blog_app/templates/blog_app/blog_list_page.html
+++ b/blog_app/templates/blog_app/blog_list_page.html
@@ -33,11 +33,12 @@
                     </div>
                     <div class="col-lg-8">
                         <div class="row">
-                            {% for article in articles %}
+                            {% for article in page_obj %}
                             	{% include 'blog_app/includes/article.html' with article=article %}
                             {% endfor %}
                         </div>
                         <!-- end row -->
+
                         <div class="text-center pt-3">
                             <nav aria-label="مثال ناوبری صفحه" class="pagination-box">
                                 <ul class="pagination justify-content-center">
@@ -47,9 +48,11 @@
                                             <span class="sr-only">قبلی</span>
                                         </a>
                                     </li>
+
                                     <li class="page-item active"><a class="page-link" href="#">1</a></li>
                                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                                     <li class="page-item"><a class="page-link" href="#">3</a></li>
+
                                     <li class="page-item">
                                         <a class="page-link" href="#" aria-label="بعد">
                                             <span aria-hidden="true"><i class="la la-arrow-left"></i></span>
