--- a/blog_app/templates/blog_app/blog_detail_page.html
+++ b/blog_app/templates/blog_app/blog_detail_page.html
@@ -6,12 +6,11 @@
 {% block title %}{% endblock %}
 
 {% block content %}
+
+    {% comment %}breadcrumb{% endcomment %}
     <section class="breadcrumb-area pt-80px pb-80px pattern-bg">
         <div class="container">
             <div class="breadcrumb-content">
-                <div class="section-heading pb-3">
-                    <h2 class="section__title">{{ article.title }}</h2>
-                </div>
                 <ul class="generic-list-item generic-list-item-arrow d-flex flex-wrap align-items-center">
                     <li><a href="{% url 'main_app:index' %}">صفحه اصلی</a></li>
                     <li><a href="{% url 'blog_app:blog_list' %}">وبلاگ</a></li>
@@ -31,10 +30,14 @@
         <!-- end container -->
     </section>
 
+    {% comment %}content{% endcomment %}
     <section class="blog-area pt-100px pb-100px">
         <div class="container">
             <div class="row">
+                {% comment %}main{% endcomment %}
                 <div class="col-lg-8 mb-5">
+
+                    {% comment %}article_detail{% endcomment %}
                     <div class="card card-item">
                         <div class="card-body">
                             <div class="generic-img-box-content text-center mb-5">
@@ -47,7 +50,9 @@
                             <div class="d-flex flex-wrap justify-content-between align-items-center pt-3">
                                 <ul class="generic-list-item generic-list-item-boxed d-flex flex-wrap fs-15">
                                     {% for tag in article.selected_tags.all %}
-                                        <li class="mr-2"><a href="#">{{ tag.title }}</a></li>
+                                        <li class="mr-2"><a
+                                                href="{% url 'blog_app:blog_list' %}?tag={{ tag.title|urlencode }}">{{ tag.title }}</a>
+                                        </li>
                                     {% endfor %}
 
 
@@ -73,8 +78,9 @@
                         <!-- end card-body -->
                     </div>
 
+                    {% comment %}about author{% endcomment %}
                     <div class="instructor-wrap py-5">
-                        <h3 class="fs-22 font-weight-semi-bold pb-4 ml-4">نوسینده</h3>
+                        <h3 class="fs-22 font-weight-semi-bold pb-4 ml-4">نویسنده</h3>
                         <div class="media media-card">
                             <div class="media-img rounded-full avatar-lg mr-4">
                                 {% if article.author.avatar %}
@@ -108,119 +114,87 @@
                         </div>
                     </div>
 
-                    <div class="section-block"></div>
-                    <div class="comments-wrap pt-5" id="comments">
-                        <div class="d-flex align-items-center justify-content-between pb-4">
-                            <h3 class="fs-22 font-weight-semi-bold">نظرات</h3>
-                            <span class="ribbon ribbon-lg">{{ article.articlecomment_set.all.count }}</span>
-                        </div>
-                        <div class="comment-list">
-                            {% for comment in comments %}
-                                <div class="media media-card border-bottom border-bottom-gray pb-4 mb-4">
-                                    <div class="media-img mr-4 rounded-full">
-                                        <img class="rounded-full lazy" src="{{ comment.user.avatar.url }}"
-                                             alt="تصویر کاربر" style="">
-                                    </div>
-                                    <div class="media-body">
-                                        <h5 class="pb-2">{{ comment.user.get_full_name}}</h5>
-                                        <span class="d-block lh-18 pb-2">یک ماه قبل</span>
-                                        <p class="pb-3">{{ comment.text }}</p>
-                                        <div class="helpful-action d-flex align-items-center justify-content-between">
-                                            <a class="btn theme-btn theme-btn-sm theme-btn-transparent lh-30" href="#"
-                                               data-toggle="modal" data-target="#replyModal"><i
-                                                    class="la la-reply mr-1"></i> پاسخ</a>
-                                            <div class="pl-2">
-                                                <span class="fs-13">آیا این بررسی مفید بود؟</span>
-                                                <button class="btn">آره</button>
-                                                <button class="btn">خیر</button>
+                    {% comment %}show comment{% endcomment %}
+                    {% if comments %}
+                        <div class="section-block"></div>
+                        <div class="comments-wrap pt-5" id="comments">
+                            <div class="d-flex align-items-center justify-content-between pb-4">
+                                <h3 class="fs-22 font-weight-semi-bold">نظرات</h3>
+                                <span class="ribbon ribbon-lg">{{ article.articlecomment_set.all.count }}</span>
+                            </div>
+                            <div class="comment-list">
+                                {% for comment in comments %}
+                                    <div class="media media-card border-bottom border-bottom-gray pb-4 mb-4">
+                                        <div class="media-img mr-4 rounded-full">
+                                            <img class="rounded-full lazy" src="{{ comment.user.avatar.url }}"
+                                                 alt="تصویر کاربر" style="">
+                                        </div>
+                                        <div class="media-body">
+                                            <h5 class="pb-2">{{ comment.user.get_full_name }}</h5>
+                                            <span class="d-block lh-18 pb-2">یک ماه قبل</span>
+                                            <p class="pb-3">{{ comment.text }}</p>
+                                            <div class="helpful-action d-flex align-items-center justify-content-between">
+                                                <a href="#" onclick="setParentId({{ comment.id }}); return false;"
+                                                   class="btn theme-btn theme-btn-sm theme-btn-transparent lh-30"><i
+                                                        class="la la-reply mr-1"></i> پاسخ</a>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                {% for reply in comment.articlecomment_set.all %}
-                                    {% if reply.is_active and not reply.is_delete %}
-                                        <div class="media media-card border-bottom border-bottom-gray pb-4 mb-4 review-reply">
-                                            <div class="media-img mr-4 rounded-full">
-                                                <img class="rounded-full lazy"
-                                                     src="{{ reply.user.avatar.url }}"
-                                                     alt="تصویر کاربر" style="">
-                                            </div>
-                                            <div class="media-body">
-                                                <h5 class="pb-2">{{ reply.user.get_full_name}}</h5>
-                                                <span class="d-block lh-18 pb-2">1 ماه پیش</span>
-                                                <p class="pb-3">{{ reply.text }}</p>
-                                                <div class="helpful-action d-flex align-items-center justify-content-between">
-                                                    <a class="btn theme-btn theme-btn-sm theme-btn-transparent lh-30"
-                                                       href="#"
-                                                       data-toggle="modal" data-target="#replyModal"><i
-                                                            class="la la-reply mr-1"></i> پاسخ</a>
-                                                    <div class="pl-2">
-                                                        <span class="fs-13">آیا این بررسی مفید بود؟</span>
-                                                        <button class="btn">آره</button>
-                                                        <button class="btn">خیر</button>
-                                                    </div>
+                                    {% for reply in comment.articlecomment_set.all %}
+                                        {% if reply.is_active and not reply.is_delete %}
+                                            <div class="media media-card border-bottom border-bottom-gray pb-4 mb-4 review-reply">
+                                                <div class="media-img mr-4 rounded-full">
+                                                    <img class="rounded-full lazy"
+                                                         src="{{ reply.user.avatar.url }}"
+                                                         alt="تصویر کاربر" style="">
+                                                </div>
+                                                <div class="media-body">
+                                                    <h5 class="pb-2">{{ reply.user.get_full_name }}</h5>
+                                                    <span class="d-block lh-18 pb-2">1 ماه پیش</span>
+                                                    <p class="pb-3">{{ reply.text }}</p>
+
                                                 </div>
                                             </div>
-                                        </div>
-                                    {% endif %}
+                                        {% endif %}
+                                    {% endfor %}
                                 {% endfor %}
-                            {% endfor %}
+                            </div>
                         </div>
-                        <div class="load-more-btn-box text-center pt-3 pb-5">
-                            <button class="btn theme-btn theme-btn-sm theme-btn-transparent lh-30"><i
-                                    class="la la-refresh mr-1"></i> بارگذاری نظر بیشتر
-                            </button>
-                        </div>
-                    </div>
+                    {% endif %}
 
-                    <div class="section-block"></div>
+
+                    {% comment %}add comment{% endcomment %}
+                    <div id="comment-form"></div>
+                    <br><br><br>
                     <div class="add-comment-wrap pt-5">
                         <h3 class="fs-22 font-weight-semi-bold pb-4">یک نظر اضافه کنید</h3>
-                        <form method="post" class="row" action="{% url 'blog_app:blog_detail' pk=article.pk %}">
-                            {% csrf_token %}
 
-                            <div class="input-box col-lg-6">
-                                <label class="label-text">نام</label>
-                                <div class="form-group">
-                                    <input class="form-control form--control" type="text" name="name"
-                                           placeholder="اسم شما">
-                                    <span class="la la-user input-icon"></span>
-                                </div>
-                            </div>
-                            <!-- end input-box -->
-                            <div class="input-box col-lg-6">
-                                <label class="label-text">پست الکترونیک</label>
-                                <div class="form-group">
-                                    <input class="form-control form--control" type="email" name="email"
-                                           placeholder="آدرس ایمیل">
-                                    <span class="la la-envelope input-icon"></span>
-                                </div>
-                            </div>
-                            <!-- end input-box -->
-                            <div class="input-box col-lg-12">
-                                <label class="label-text">پیام</label>
-                                <div class="form-group">
+                        {% if user.is_authenticated %}
+                            <form method="post" class="row"
+                                  action="{% url 'blog_app:blog_detail' pk=article.pk %}">
+                                {% csrf_token %}
+                                <input type="hidden" name="parent_id" id="parent_id" value="">
+                                <div class="input-box col-lg-12">
+                                    <div class="form-group">
                                     <textarea class="form-control form--control pl-3" name="message"
                                               placeholder="پیام بنویس" rows="5"></textarea>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- end input-box -->
-                            <div class="btn-box col-lg-12">
-                                <div class="custom-control custom-checkbox mb-3 fs-15">
-                                    <input type="checkbox" class="custom-control-input" id="saveCheckbox" required="">
-                                    <label class="custom-control-label custom--control-label" for="saveCheckbox">
-                                        برای دفعه بعد که نظر دادم نام و ایمیل من را در این مرورگر ذخیره کنید.
-                                    </label>
+
+                                <div class="btn-box col-lg-12">
+                                    <button class="btn theme-btn" type="submit">ثبت کردن نظر</button>
                                 </div>
-                                <!-- end custom-control -->
-                                <button class="btn theme-btn" type="submit">ثبت کردن نظر</button>
-                            </div>
-                            <!-- end btn-box -->
-                        </form>
+
+                            </form>
+                        {% else %}
+                            <p>برای ثبت نظر باید <a href="/">وارد شوید</a>.</p>
+                        {% endif %}
+
                     </div>
 
                 </div>
 
+                {% comment %}sidebar{% endcomment %}
                 <div class="col-lg-4">
                     <div class="sidebar">
                         {% render_partial 'blog_app.views.SearchArticlesView' %}
