--- a/templates/shared/site_footer_component.html
+++ b/templates/shared/site_footer_component.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section class="footer-area pt-100px">
+<section class="footer-area pt-100px bg-gray">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 responsive-column-half">
