complete account_app section

--- a/account_app/templates/account_app/register.html
+++ b/account_app/templates/account_app/register.html
@@ -99,6 +99,16 @@
                                 </div>
 
                             </form>
+                            {% if messages %}
+                                {% for message in messages %}
+                                    {% if message.tags == 'success' or message.tags == 'error' %}
+                                        <div class="alert {% if message.tags == 'success' %}alert-success{% else %}alert-danger{% endif %} mt-3"
+                                             role="alert">
+                                            {{ message }}
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
                         </div>
 
                     </div>
