--- a/blog_app/templates/blog_app/blog_list_page.html
+++ b/blog_app/templates/blog_app/blog_list_page.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="breadcrumb-content d-flex flex-wrap align-items-center justify-content-between">
                 <ul class="generic-list-item generic-list-item-white generic-list-item-arrow d-flex flex-wrap align-items-center">
-                    <li><a href="index.html">صفحه اصلی</a></li>
+                    <li><a href="{% url 'main_app:index' %}">صفحه اصلی</a></li>
                     <li>وبلاگ</li>
                 </ul>
             </div>
