--- a/blog_app/templates/blog_app/includes/article.html
+++ b/blog_app/templates/blog_app/includes/article.html
@@ -13,29 +13,13 @@
         <div class="card-body">
             <h5 class="card-title"><a href="{% url 'blog_app:blog_detail' pk=article.id %}">{{ article.title }}</a></h5>
             <ul class="generic-list-item generic-list-item-bullet generic-list-item--bullet d-flex align-items-center flex-wrap fs-14 pt-2">
-                <li class="d-flex align-items-center">توسط <a href="#">جان دئو</a></li>
-                <li class="d-flex align-items-center"><a href="#">4 نظر</a></li>
-                <li class="d-flex align-items-center"><a href="#">130 لایک</a></li>
+                <li class="d-flex align-items-center">توسط: <a href="#">&nbsp;{{ article.author.get_full_name }}</a></li>
+                <li class="d-flex align-items-center"><a href="#">{{ article.articlecomment_set.all.count }} نظر</a></li>
             </ul>
             <div class="d-flex justify-content-between align-items-center pt-3">
                 <a href="{% url 'blog_app:blog_detail' pk=article.id %}"
                    class="btn theme-btn theme-btn-sm theme-btn-white">ادامه مطلب <i
                         class="la la-arrow-left icon ml-1"></i></a>
-                <div class="share-wrap">
-                    <ul class="social-icons social-icons-styled">
-                        <li class="mr-0">
-                            <a href="#" class="facebook-bg"><i class="la la-facebook"></i></a>
-                        </li>
-                        <li class="mr-0">
-                            <a href="#" class="twitter-bg"><i class="la la-twitter"></i></a>
-                        </li>
-                        <li class="mr-0">
-                            <a href="#" class="instagram-bg"><i class="la la-instagram"></i></a>
-                        </li>
-                    </ul>
-                    <div class="icon-element icon-element-sm shadow-sm cursor-pointer share-toggle"
-                         title="تغییر وضعیت برای گسترش نمادهای اجتماعی"><i class="la la-share-alt"></i></div>
-                </div>
             </div>
         </div>
         <!-- end card-body -->
