--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -10,7 +10,7 @@
                             <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                     class="la la-phone mr-1"></i><a href="tel:00123456789"> (00) 123 456 789</a></li>
                             <li class="d-flex align-items-center"><i class="la la-envelope-o mr-1"></i><a
-                                    href="mailto:contact@aduca.com"> contact@aduca.com</a></li>
+                                    href="#"> info@nabieakram.ir</a></li>
                         </ul>
                     </div><!-- end header-widget -->
                 </div><!-- end col-lg-6 -->
@@ -45,18 +45,31 @@
                                             class="la la-user mr-1"></i><a
                                             href="/admin">
                                         ادمین</a></li>
-                                    <li class="d-flex align-items-center"><i class="la la-user mr-1"></i><a
+                                    <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
+                                            class="la la-user mr-1"></i><a
                                             href="/admin">
                                         حساب کاربری</a></li>
+                                    <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
+                                            class="la la-sign-out mr-1"></i><a
+                                            href="{% url 'account_app:logout_page' %}">
+                                        خروچ</a></li>
                                 {% else %}
-                                    <li class="d-flex align-items-center"><i class="la la-user mr-1"></i><a
+                                    <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
+                                            class="la la-user mr-1"></i><a
                                             href="/admin">
                                         حساب کاربری</a></li>
+                                    <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
+                                            class="la la-sign-out mr-1"></i><a
+                                            href="{% url 'account_app:logout_page' %}">
+                                        خروچ</a></li>
+
                                 {% endif %}
                             {% else %}
                                 <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
-                                        class="la la-sign-in mr-1"></i><a href="{% url 'account_app:login_page' %}"> وارد شدن</a></li>
-                                <li class="d-flex align-items-center"><i class="la la-user mr-1"></i><a
+                                        class="la la-sign-in mr-1"></i><a href="{% url 'account_app:login_page' %}">
+                                    وارد شدن</a></li>
+                                <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
+                                        class="la la-user mr-1"></i><a
                                         href="{% url 'account_app:register_page' %}">
                                     ثبت نام</a></li>
                             {% endif %}
@@ -65,7 +78,7 @@
                 </div><!-- end col-lg-6 -->
             </div><!-- end row -->
         </div><!-- end container-fluid -->
-    </div><!-- end header-top -->
+    </div>
     <div class="header-menu-content pr-150px pl-150px bg-white">
         <div class="container-fluid">
             <div class="main-menu-content">
@@ -73,15 +86,11 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2">
                         <div class="logo-box">
-                            <a href="index.html" class="logo"><img src="{% static 'images/logo.png' %}" alt="لوگو"></a>
+                            <a href="{% url 'main_app:index' %}" class="logo"><img src="{% static 'images/Heiat-Red.png' %}" width="80" alt="لوگو"></a>
                             <div class="user-btn-action">
                                 <div class="search-menu-toggle icon-element icon-element-sm shadow-sm mr-2"
                                      data-toggle="tooltip" data-placement="top" title="جستجو کردن">
                                     <i class="la la-search"></i>
-                                </div>
-                                <div class="off-canvas-menu-toggle cat-menu-toggle icon-element icon-element-sm shadow-sm mr-2"
-                                     data-toggle="tooltip" data-placement="top" title="منوی دسته بندی">
-                                    <i class="la la-th-large"></i>
                                 </div>
                                 <div class="off-canvas-menu-toggle main-menu-toggle icon-element icon-element-sm shadow-sm"
                                      data-toggle="tooltip" data-placement="top" title="منوی اصلی">
@@ -110,65 +119,14 @@
                                     <span class="la la-search search-icon"></span>
                                 </div>
                             </form>
-                            <div class="shop-cart mr-4">
-                                <ul>
-                                    <li>
-                                        <p class="shop-cart-btn d-flex align-items-center">
-                                            <i class="la la-shopping-cart"></i>
-                                            <span class="product-count">2</span>
-                                        </p>
-                                        <ul class="cart-dropdown-menu">
-                                            <li class="media media-card">
-                                                <a href="shopping-cart.html" class="media-img">
-                                                    <img src="{% static 'images/small-img.jpg' %}" alt="تصویر سبد خرید">
-                                                </a>
-                                                <div class="media-body">
-                                                    <h5><a href="course-details.html">دوره کامل جاوا اسکریپت 1400: از
-                                                        صفر تا متخصص!</a></h5>
-                                                    <span class="d-block lh-18 py-1">کامران احمد</span>
-                                                    <p class="text-black font-weight-semi-bold lh-18">12.99 تومان <span
-                                                            class="before-price fs-14">129.99 تومان</span></p>
-                                                </div>
-                                            </li>
-                                            <li class="media media-card">
-                                                <a href="shopping-cart.html" class="media-img">
-                                                    <img src="{% static 'images/small-img.jpg' %}" alt="تصویر سبد خرید">
-                                                </a>
-                                                <div class="media-body">
-                                                    <h5><a href="course-details.html">دوره کامل جاوا اسکریپت 1400: از
-                                                        صفر تا متخصص!</a></h5>
-                                                    <span class="d-block lh-18 py-1">کامران احمد</span>
-                                                    <p class="text-black font-weight-semi-bold lh-18">12.99 تومان <span
-                                                            class="before-price fs-14">129.99 تومان</span></p>
-                                                </div>
-                                            </li>
-                                            <li class="media media-card">
-                                                <div class="media-body fs-16">
-                                                    <p class="text-black font-weight-semi-bold lh-18">مجموع: <span
-                                                            class="cart-total">12.99 تومان </span> <span
-                                                            class="before-price fs-14">12.99 تومان</span></p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <a href="shopping-cart.html" class="btn theme-btn w-100">ادامه فرایند
-                                                    خرید <i class="la la-arrow-left icon ml-1"></i></a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="nav-left-button">
-                                <a href="admission.html" class="btn theme-btn d-none d-lg-inline-block"><i
-                                        class="la la-user-plus mr-1"></i> پذیرش</a>
-                            </div>
                         </div>
                         <!-- end menu-wrapper -->
                     </div><!-- end col-lg-10 -->
                 </div><!-- end row -->
             </div>
         </div><!-- end container-fluid -->
-    </div><!-- end header-menu-content -->
-    <div class="off-canvas-menu custom-scrollbar-styled main-off-canvas-menu">
+    </div>
+    {% comment %}<div class="off-canvas-menu custom-scrollbar-styled main-off-canvas-menu">
         <div class="off-canvas-menu-close main-menu-close icon-element icon-element-sm shadow-sm" data-toggle="tooltip"
              data-placement="right" title="بستن منو">
             <i class="la la-times"></i>
@@ -373,7 +331,7 @@
                 </ul>
             </li>
         </ul>
-    </div><!-- end off-canvas-menu -->
+    </div>{% endcomment %}
     <div class="mobile-search-form">
         <div class="d-flex align-items-center">
             <form method="post" class="flex-grow-1 mr-3">
@@ -387,6 +345,6 @@
                 <i class="la la-times"></i>
             </div><!-- end off-canvas-menu-close -->
         </div>
-    </div><!-- end mobile-search-form -->
+    </div>
     <div class="body-overlay"></div>
 </header>
